Fix side menu alignment on about page

--- a/src/pages/About.module.css
+++ b/src/pages/About.module.css
@@ -1,10 +1,24 @@
+.aboutContent {
+    height: 100vh;
+    padding: 6vh 7.5vw;
+}
+
 h1 {
     text-shadow: 0px 0px 5px white;
     font-weight: 200;
 }
 
+#aboutText {
+    margin-left: 40px;
+    text-indent: 50px;
+    font-size: 22px;
+    width: 75vw;
+}
+
 #skills {
     text-align: center;
+    width: 75vw;
+    margin: auto 30px 0px;
 }
 
 .logo {
@@ -13,85 +27,24 @@ h1 {
     border-width: 1px;
     border-style: solid;
     border-image: linear-gradient(to right, rgb(255, 255, 255, 0.9), rgba(255, 255, 255, 0.452)) 1;
+    width: 120px;
+    height: 120px;
+    margin: 0px 9px 18px;
+    padding: 15px;
+}
+
+svg {
+    width: 85px;
 }
 
 .logoTitle {
     display: block;
+    font-size: 18px;
+    margin-top: 12px;
 }
 
-
-@media only screen and (min-width: 150px) {
-    h1 {
-        font-size: 28px;
-    }
-
-    .aboutContent {
-        margin: 30px 8.2vw;
-        padding-bottom: 50px;
-    }
-
-    #aboutText {
-        text-indent: 30px;
-        font-size: 18px;
-    }
-
-    .logo {
-        width: 74px;
-        height: 74px;
-        margin: 0px 7px 14px;
-        padding: 10px;
-    }
-
-    .logoTitle {
-        font-size: 14px;
-        margin-top: 2px;
-    }
-
-    svg {
-        width: 54px;
-    }
-
-    #skills {
-        margin-bottom: 20px;
-    }
-}
-
-@media only screen and (min-width: 631px) {
-    h1 {
-        font-size: 35px;
-    }
-
-    .logo {
-        width: 120px;
-        height: 120px;
-        margin: 0px 9px 18px;
-        padding: 15px;
-    }
-
-    .logoTitle {
-        font-size: 18px;
-        margin-top: 12px;
-    }
-
-    svg {
-        width: 85px;
-    }
-}
-
-@media only screen and (min-width: 1050px) {
-    .aboutContent {
-        margin: 60px 7.5vw;
-    }
-
-    #aboutText {
-        margin-left: 40px;
-        text-indent: 50px;
-        font-size: 22px;
-        width: 75vw;
-    }
-
-    #skills {
-        width: 75vw;
-        margin: auto 30px 0px;
+@media (max-width: 768px) {
+    .skillsSection {
+        display: none;
     }
 }
